--- a/Ejercicio06.html
+++ b/Ejercicio06.html
@@ -13,5 +13,6 @@
         <li class="lista__elemento">Tercer elemento</li>
         <li class="lista__elemento oculto">Cuarto elemento</li>
     </ul>
+    <script src="Ejercicio06.js"></script>
 </body>
 </html>
